idf_component_register(SRCS "src/libswd_bin.c"
                            "src/libswd_bitgen.c"
                            "src/libswd_bus.c"
                            "src/libswd_cli.c"
                            "src/libswd_cmd.c"
                            "src/libswd_cmdq.c"
                            "src/libswd_core.c"
                            "src/libswd_dap.c"
                            "src/libswd_debug.c"
                            "src/libswd_drv.c"
                            "src/libswd_error.c"
                            "src/libswd_log.c"
                            "src/libswd_memap.c"
                            "src/libswd_esp32_spi.c"
                        INCLUDE_DIRS "include")